--- a/Modules/M2.md
+++ b/Modules/M2.md
@@ -22,9 +22,9 @@
 
 #### Cross-correlation vs. Convolution
 
-<img src="C:\Users\cjhm0\Desktop\COMP90086_Revision\Modules\images\2\2-2.jpg" alt="2-2" style="zoom: 67%;" /><img src="C:\Users\cjhm0\Desktop\COMP90086_Revision\Modules\images\2\2-1.jpg" alt="2-1" style="zoom:67%;" />
+<img src="images/2/2-2.jpg" alt="2-2" style="zoom: 67%;" /><img src="images/2/2-1.jpg" alt="2-1" style="zoom:67%;" />
 
-<img src="C:\Users\cjhm0\Desktop\COMP90086_Revision\Modules\images\2\2-3.jpg" alt="2-3" style="zoom:67%;" /><img src="C:\Users\cjhm0\Desktop\COMP90086_Revision\Modules\images\2\2-4.jpg" alt="2-4" style="zoom:67%;" />
+<img src="images/2/2-3.jpg" alt="2-3" style="zoom:67%;" /><img src="images/2/2-4.jpg" alt="2-4" style="zoom:67%;" />
 
 * Cross-correlation: overlay filter on image
 * Convolution: flip filter horizontally and vertically
@@ -40,15 +40,15 @@
 * Sharpening filters: subtract pixel from surround, increase fine detail
 * Edge filters: compute difference between pixels, detect oriented edges in image
 
-![2-5](C:\Users\cjhm0\Desktop\COMP90086_Revision\Modules\images\2\2-5.jpg) No change. Behave like a pixel operator
+![2-5](images/2/2-5.jpg) No change. Behave like a pixel operator
 
-![2-6](C:\Users\cjhm0\Desktop\COMP90086_Revision\Modules\images\2\2-6.jpg) Shift left by 1 pixel
+![2-6](images/2/2-6.jpg) Shift left by 1 pixel
 
-![2-7](C:\Users\cjhm0\Desktop\COMP90086_Revision\Modules\images\2\2-7.jpg) Sharpening filter. Accentuates differences with local average.
+![2-7](images/2/2-7.jpg) Sharpening filter. Accentuates differences with local average.
 
 ##### Gaussian
 
-<img src="C:\Users\cjhm0\Desktop\COMP90086_Revision\Modules\images\2\2-8.jpg" alt="2-8" style="zoom:67%;" />
+<img src="images/2/2-8.jpg" alt="2-8" style="zoom:67%;" />
 
 ##### Sobel: L2.1 P26, 27
 
@@ -71,13 +71,13 @@
 
 ##### Properties of linear filters
 
-#### <img src="C:\Users\cjhm0\Desktop\COMP90086_Revision\Modules\images\2\2-9.jpg" alt="2-9" style="zoom: 67%;" />
+#### <img src="images/2/2-9.jpg" alt="2-9" style="zoom: 67%;" />
 
 ##### Efficient filtering
 
 * Multiple filters: generally more efficient to combine 2D filters ( ℎ1∗ℎ2∗ℎ3…) and filter image just once L2.1 P35
 * Separable filters: generally more efficient to filter with two 1D filters than one 2D filter    L2.1 P37
-* For example, the 2D Gaussian can be expressed as a product of two 1D Gaussians (in x and y)![2-10](C:\Users\cjhm0\Desktop\COMP90086_Revision\Modules\images\2\2-10.jpg)
+* For example, the 2D Gaussian can be expressed as a product of two 1D Gaussians (in x and y)![2-10](images/2/2-10.jpg)
 
 ##### Convolution output size
 
@@ -110,11 +110,11 @@ Valid convolution: The output image is smaller than the input image
 
 ##### Any signals or pattern can be described as a sum of *sinusoids* (L2.2 P7-13).
 
-Sum of sinusoids: (L2.2 P14-17)<img src="C:\Users\cjhm0\Desktop\COMP90086_Revision\Modules\images\2\2-11.jpg" alt="2-11" style="zoom:67%;" />
+Sum of sinusoids: (L2.2 P14-17)<img src="images/2/2-11.jpg" alt="2-11" style="zoom:67%;" />
 
 #### Fourier transform
 
-#### <img src="C:\Users\cjhm0\Desktop\COMP90086_Revision\Modules\images\2\2-12.jpg" alt="2-12" style="zoom:80%;" />
+#### <img src="images/2/2-12.jpg" alt="2-12" style="zoom:80%;" />
 
 ##### Frequency Spectrum	L2.2 P19-21
 
@@ -128,7 +128,7 @@ Sum of sinusoids: (L2.2 P14-17)<img src="C:\Users\cjhm0\Desktop\COMP90086_Revisi
 * Any image can be represented by its Fourier transform
 * Fourier transform = for each frequency, magnitude (amplitude) + phase
 
-<img src="C:\Users\cjhm0\Desktop\COMP90086_Revision\Modules\images\2\2-13.jpg" alt="2-13" style="zoom:67%;" />      <img src="C:\Users\cjhm0\Desktop\COMP90086_Revision\Modules\images\2\2-14.jpg" alt="2-14" style="zoom:67%;" />
+<img src="images/2/2-13.jpg" alt="2-13" style="zoom:67%;" />      <img src="images/2/2-14.jpg" alt="2-14" style="zoom:67%;" />
 
 ##### Magnitude and phase
 
@@ -140,7 +140,7 @@ Sum of sinusoids: (L2.2 P14-17)<img src="C:\Users\cjhm0\Desktop\COMP90086_Revisi
 
 ### Frequency filtering
 
-#### <img src="C:\Users\cjhm0\Desktop\COMP90086_Revision\Modules\images\2\2-15.jpg" alt="2-15" style="zoom:80%;" />
+#### <img src="images/2/2-15.jpg" alt="2-15" style="zoom:80%;" />
 
 #### Band pass filter: A filter that removes a range of frequencies from a signal
 
